Bug 1597681: Remove debug assertion for AddRef on main thread. r=mattwoodrow

gfx::SourceSurface supports atomic ref counting, so is safe to call
AddRef/Release from any thread.  With the move to remote decoding in different
processes, access to Image happens on IPDL actor thread.

Retain the Release behavior of only releasing on the main thread.

Differential Revision: https://phabricator.services.mozilla.com/D55049